project(HOST_APPS)
LINK_LIBRARIES(mipsvm)
INCLUDE_DIRECTORIES(${MIPS_SOURCE_DIR}/vm ${MIPS_SOURCE_DIR}/vm/hosted)
ADD_EXECUTABLE(runtorture runtorture.c util.c rc5-16.c)
ADD_EXECUTABLE(run run.c util.c rc5-16.c)
ADD_EXECUTABLE(sstep sstep.c)
ADD_EXECUTABLE(elfcrypt elfcrypt.c util.c rc5-16.c)
ADD_EXECUTABLE(bench_hanoi ${MIPS_APPS_SOURCE_DIR}/bench_hanoi.c)
ADD_EXECUTABLE(load-lvl1 load-lvl1.c util.c rc5-16.c)
