project(HOST_APPS)
LINK_LIBRARIES(mipsvm)
INCLUDE_DIRECTORIES(${MIPS_SOURCE_DIR}/vm ${MIPS_SOURCE_DIR}/vm/hosted)
ADD_EXECUTABLE(sstep sstep.c)
ADD_EXECUTABLE(bench_hanoi ${MIPS_APPS_SOURCE_DIR}/bench_hanoi.c)

project(RUN_APP)
LINK_LIBRARIES(mipsvm)
LINK_LIBRARIES(cspim)
INCLUDE_DIRECTORIES(${MIPS_SOURCE_DIR}/vm ${MIPS_SOURCE_DIR}/vm/hosted ${MIPS_SOURCE_DIR}/lib)
ADD_EXECUTABLE(run run.c)
ADD_EXECUTABLE(run-md5 run-md5.c)
ADD_EXECUTABLE(runtorture runtorture.c)
ADD_EXECUTABLE(elfcrypt elfcrypt.c)
ADD_EXECUTABLE(load-lvl1 load-lvl1.c)
